<resources>
    <string name="app_name">My Task Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_signin">SignIn</string>
    <string name="msg_welcome">Welcome %s!</string>
    <string name="lbl_altura">Height</string>
    <string name="lbl_peso">Weight</string>
    <string name="btn_Calcular">Calculate IMC</string>
    <string name="msg_imc">Your IMC is %.2f!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_save">Save</string>
    <string name="msg_save">Save</string>
    <string name="msg_error_required">Required field!</string>
    <string name="msg_save_success">Saved!</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="msg_update_task">Updated!</string>
    <string name="msg_delete_task">Deleted!</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="msg_delete_confirm">You really want to delete this task?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="dialog_color_label_title">Select Color</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_labels">Labels</string>
    <string name="lbl_label">Label</string>
    <string name="lbl_re_password">Re-Password</string>
    <string name="lbl_signup">SignUp</string>
    <string name="msg_error_usr">User not found. Register a new account?</string>
    <string name="msg_error_password_mismatch">Different passwords!</string>
    <string name="lbl_zip_code">Zip Code</string>
    <string name="lbl_address_type">Type</string>
    <string name="lbl_street">Street</string>
    <string name="lbl_neighborhood">Neighborhood</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state_uf">State</string>
</resources>
