<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:hint="@string/lbl_name" />

    <EditText
        android:id="@+id/editTextUserPassword"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:hint="@string/lbl_password"
        android:password="true" />

    <EditText
        android:id="@+id/editTextUserRePassword"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:hint="@string/lbl_re_password"
        android:password="true" />

</LinearLayout>