<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_name" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/lbl_labels"
        android:textSize="10pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/spinnerLayout"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="8"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="-4dp">
            <Spinner
                android:id="@+id/snipperLabels"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

        <Button
            android:id="@+id/buttonAddLabel"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_weight="2"
            android:text="@string/lbl_add" />
    </LinearLayout>


</LinearLayout>